# ssw-agent

./: .env.example  .gitignore  AGENTS.md  README.md  langgraph.json  pyproject.toml
data/memories/: AGENTS.md
data/skills/skills_baidu_drive/: SKILL.md
data/skills/text_to_sql/: SKILL.md
drafts/: greeting_email_827743509_qq_com.txt
src/openclaw_da/: agent.py  cli.py  config.py  mcp_tools.py  server.py
src/openclaw_da/subagents/baidu_drive/: agent.py
src/openclaw_da/subagents/map_assistant/: agent.py
src/openclaw_da/subagents/map_assistant/tool/: mcp_tools.py
src/openclaw_da/subaggents/: agent.py
src/openclaw_da/subaggents/tool/: mcp_tools.py
src/ssw/: agent.py  config.py  llm.py  mcp_tools.py  schemas.py  server.py
src/ssw/api/: database.py
src/ssw/subagents/: __init__.py
src/ssw/subagents/code_generate/: agent.py  model.py  tool.py
src/ssw/subagents/default/: agent.py
src/ssw/subagents/default/skills/blog_skills/: SKILL.md
src/ssw/subagents/default/skills/blog_skills/references/: commands.md
src/ssw/subagents/text_to_sql/: __init__.py  agent.py  tool.py
src/ssw/subagents/text_to_sql/skills/ssw_blog/: SKILL.md
src/ssw/subagents/text_to_sql/tool/: __init__.py
web/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.vue  styles.css
web/src/services/: datasources.ts  langgraph.ts
